feat: implement full-stack Vercel deployment with AI agent integration
This commit provides a complete full-stack fix for Vercel deployment:

## Vercel Configuration (vercel.json)
- Configure proper build commands for Next.js frontend
- Add Python 3.12 runtime for API serverless functions
- Set up rewrites for /api/v1/* routes to Python backend
- Add security headers for API endpoints
- Configure CORS for cross-origin requests

## Python API Backend (api/index.py)
- Implement FastAPI application with Mangum ASGI wrapper
- Add comprehensive agent endpoints (/v1/agents, /v1/agents/{id}, etc.)
- Include mock data for 6 SuperAgents with tools and ML models
- Add metrics dashboard endpoint (/v1/metrics/dashboard)
- Add 3D pipeline status endpoint (/v1/3d/status)
- Include fallback handler for minimal mode

## API Dependencies (api/requirements.txt)
- Add fastapi>=0.109.0 for API framework
- Add mangum>=0.17.0 for ASGI-to-Lambda adapter
- Add pydantic>=2.0.0 for data validation
- Add httpx>=0.25.0 for HTTP client

## Frontend Integration (frontend/lib/api.ts)
- Update API client to use /v1/ versioned endpoints
- Add error handling with APIError class
- Add 3D pipeline API (threeDAPI) for 3D Asset Dashboard
- Configure proper base URL from environment

## Next.js Configuration (frontend/next.config.js)
- Add development proxy for local Python backend
- Configure CORS headers for API routes
- Add skyyrose.co to image domains

Closes deployment failure for The-Skyy-Rose-Collection-LLC/DevSkyy

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,39 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "rootDirectory": "frontend",
   "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "outputDirectory": ".next",
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "outputDirectory": "frontend/.next",
+  "installCommand": "cd frontend && npm install",
   "regions": ["iad1"],
-  "env": {
-    "NEXT_PUBLIC_API_URL": "/api"
+  "functions": {
+    "api/**/*.py": {
+      "runtime": "@vercel/python@3.12",
+      "maxDuration": 60,
+      "memory": 1024
+    }
   },
+  "rewrites": [
+    {
+      "source": "/api/v1/:path*",
+      "destination": "/api/index.py"
+    },
+    {
+      "source": "/api/health",
+      "destination": "/api/index.py"
+    },
+    {
+      "source": "/api/docs",
+      "destination": "/api/index.py"
+    }
+  ],
   "headers": [
     {
       "source": "/api/(.*)",
       "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Authorization" },
         { "key": "X-Content-Type-Options", "value": "nosniff" },
         { "key": "X-Frame-Options", "value": "DENY" },
         { "key": "X-XSS-Protection", "value": "1; mode=block" },
