--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,8 +2,21 @@
 # ========================
 # Minimal requirements for Vercel serverless functions
 
-# No additional requirements needed for the mock API
-# Production would include:
-# httpx>=0.25.0
-# pydantic>=2.0.0
-# asyncpg>=0.29.0
+# Core Framework
+fastapi>=0.109.0,<0.122.0
+pydantic>=2.0.0,<3.0.0
+starlette>=0.35.0,<1.0.0
+
+# Serverless Adapter (ASGI to Lambda)
+mangum>=0.17.0,<1.0.0
+
+# HTTP Client (for external API calls)
+httpx>=0.25.0,<1.0.0
+
+# Date handling
+python-dateutil>=2.8.0
+
+# NOTE: Heavy dependencies are excluded due to Vercel's 50MB limit
+# - No torch/transformers
+# - No computer vision libraries
+# For full features, use Docker deployment
