--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "framework": "nextjs",
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/.next",
-  "installCommand": "cd frontend && npm install",
+  "installCommand": "npm install --prefix frontend && pip install -r api/requirements.txt",
   "regions": ["iad1"],
   "functions": {
     "api/**/*.py": {
-      "runtime": "@vercel/python@3.12",
+      "runtime": "python3.12",
       "maxDuration": 60,
       "memory": 1024
     }
