--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,12 +3,8 @@
 # Minimal requirements for Vercel serverless functions
 
 # Core Framework
-fastapi>=0.109.0,<0.122.0
+fastapi==0.117.1
 pydantic>=2.0.0,<3.0.0
-starlette>=0.35.0,<1.0.0
-
-# Serverless Adapter (ASGI to Lambda)
-mangum>=0.17.0,<1.0.0
 
 # HTTP Client (for external API calls)
 httpx>=0.25.0,<1.0.0
@@ -16,7 +12,7 @@ httpx>=0.25.0,<1.0.0
 # Date handling
 python-dateutil>=2.8.0
 
-# NOTE: Heavy dependencies are excluded due to Vercel's 50MB limit
+# NOTE: Heavy dependencies are excluded due to Vercel's 250MB limit
 # - No torch/transformers
 # - No computer vision libraries
 # For full features, use Docker deployment
