--- a/render.yaml
+++ b/render.yaml
@@ -3,32 +3,12 @@
 # Deploy: https://dashboard.render.com/blueprints
 # 1. Connect your GitHub repo
 # 2. Render auto-detects this file
-# 3. Set environment variables in dashboard
+# 3. Set API keys in "devskyy-secrets" env group
 
-services:
-  - type: web
-    name: devskyy-api
-    runtime: python
-    region: oregon
-    plan: free  # Start free, upgrade to starter ($7/mo) for always-on
-    branch: main
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main_enterprise:app --host 0.0.0.0 --port $PORT
-    healthCheckPath: /health
-    autoDeploy: true
+# Env Group for external API keys (create once, reuse across services)
+envGroups:
+  - name: devskyy-secrets
     envVars:
-      - key: PYTHON_VERSION
-        value: "3.11"
-      - key: ENVIRONMENT
-        value: production
-      # CORS - Your Vercel frontend URL
-      - key: CORS_ORIGINS
-        value: https://frontend-tau-vert-63.vercel.app,https://skyyrose.co,http://localhost:3000
-      # Auto-generated secrets (Render creates these automatically)
-      - key: JWT_SECRET_KEY
-        generateValue: true
-      - key: ENCRYPTION_MASTER_KEY
-        generateValue: true
       - key: OPENAI_API_KEY
         sync: false
       - key: ANTHROPIC_API_KEY
@@ -41,3 +21,28 @@ services:
         sync: false
       - key: FASHN_API_KEY
         sync: false
+
+services:
+  - type: web
+    name: devskyy-api
+    runtime: python
+    region: oregon
+    plan: free
+    branch: main
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main_enterprise:app --host 0.0.0.0 --port $PORT
+    healthCheckPath: /health
+    autoDeploy: true
+    envVarGroups:
+      - devskyy-secrets
+    envVars:
+      - key: PYTHON_VERSION
+        value: "3.11"
+      - key: ENVIRONMENT
+        value: production
+      - key: CORS_ORIGINS
+        value: https://frontend-tau-vert-63.vercel.app,https://skyyrose.co,http://localhost:3000
+      - key: JWT_SECRET_KEY
+        generateValue: true
+      - key: ENCRYPTION_MASTER_KEY
+        generateValue: true
