--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ aiosqlite>=0.19
 
 # Security
 PyJWT>=2.8
+email-validator>=2.1
 python-jose[cryptography]>=3.3
 passlib[bcrypt]>=1.7
 argon2-cffi>=23.1
