--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ openai>=1.3
 anthropic>=0.7
 google-generativeai>=0.3
 groq>=0.4
+mistralai>=1.0
+cohere>=5.0
 
 # Image Processing
 Pillow>=10.0
@@ -42,6 +44,7 @@ structlog>=23.2
 python-dotenv>=1.0
 tenacity>=8.2
 orjson>=3.9
+aiofiles>=23.2
 
 # Async Support
 anyio>=4.0
