--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ certifi>=2023.0
 # AI/LLM
 openai>=1.3
 anthropic>=0.7
-google-generativeai>=0.3
+google-genai>=1.0
 groq>=0.4
 mistralai>=1.0
 cohere>=5.0
