fix(build): update TypeScript moduleResolution for Three.js addons
- Change moduleResolution from 'node' to 'bundler' in tsconfig.json
- Fixes 37 TypeScript compilation errors for three/addons imports
- Remove duplicate esModuleInterop and allowSyntheticDefaultImports entries
- Fix import order in llm_clients.py (isort)

--- a/config/typescript/tsconfig.json
+++ b/config/typescript/tsconfig.json
@@ -10,9 +10,7 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "ESNext",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
