feat(COLL-011): optimize performance with code splitting and image optimization
- Implement dynamic imports for Three.js components
  - SignatureCanvas and LoveHurtsCanvas now use next/dynamic
  - SSR disabled for Three.js (ssr: false)
  - Loading fallback with brand colors
  - Separate bundle chunks for each canvas

- Configure Next.js image optimization
  - Enable AVIF and WebP formats
  - Remote patterns for skyyrose.com WordPress uploads
  - 7-day cache TTL for optimized images
  - Device and image sizes for responsive images

- Add resource prefetching
  - Preconnect to fonts.googleapis.com
  - Preconnect to skyyrose.com (WordPress API)
  - DNS prefetch for WordPress domain
  - Font display=swap for better LCP

- Install and configure bundle analyzer
  - Add @next/bundle-analyzer dependency
  - Compose with existing Sentry config
  - Enable via ANALYZE=true environment variable

Performance improvements:
- Reduced initial bundle size (Three.js lazy loaded)
- Faster image loading (modern formats)
- Better Core Web Vitals (preconnect, font display)
- Bundle analysis capability for monitoring

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.1.1",
     "@playwright/test": "^1.57.0",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
