--- a/vercel.json
+++ b/vercel.json
@@ -39,16 +39,22 @@
       ]
     },
     {
+      "source": "/collections/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "frame-ancestors 'self' https://skyyrose.com https://*.skyyrose.com"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
         },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
+
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
