--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^16.1.1",
@@ -44,6 +45,7 @@
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.160.0",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
     "autoprefixer": "^10.4.20",
