fix(config): update API rewrite to point to Render backend
- Change API proxy destination from api.devskyy.app to devskyy-api.onrender.com
- Fixes API calls from frontend to connect to actual backend service
- api.devskyy.app custom domain can be configured later in Render

--- a/vercel.json
+++ b/vercel.json
@@ -63,7 +63,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://api.devskyy.app/:path*"
+      "destination": "https://devskyy-api.onrender.com/:path*"
     }
   ]
 }
