fix(api): update proxy to point to devskyy-backend (paid tier)
- Change from devskyy-api (free tier, sleeping) to devskyy-backend (starter plan)
- Backend is always-on on paid plan - no cold starts
- Health endpoint confirmed working with 54 agents active

--- a/vercel.json
+++ b/vercel.json
@@ -63,7 +63,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://devskyy-api.onrender.com/:path*"
+      "destination": "https://devskyy-backend.onrender.com/:path*"
     }
   ]
 }
