docs: add Klaviyo credentials to .env.example

--- a/.env.example
+++ b/.env.example
@@ -107,6 +107,14 @@ REDIS_URL=redis://localhost:6379/0
 # =============================================================================
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
+
+# =============================================================================
+# Klaviyo Email Marketing
+# Get credentials from: https://www.klaviyo.com/account#api-keys-tab
+# =============================================================================
+KLAVIYO_PRIVATE_KEY=pk_xxxxxxxxxxxx
+KLAVIYO_PUBLIC_KEY=pk_xxxxxxxxxxxx
+KLAVIYO_LIST_ID=XXXXXX
 SMTP_USER=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
 
