--- a/package.json
+++ b/package.json
@@ -201,6 +201,7 @@
       "@isaacs/brace-expansion": ">=5.0.1",
       "fastify": ">=5.7.3",
       "fast-xml-parser": ">=5.3.6",
+      "minimatch": ">=10.2.1",
       "ajv": ">=8.18.0",
       "axios": ">=1.13.5",
       "qs": ">=6.14.2",
