--- a/grok/config/settings.json
+++ b/grok/config/settings.json
@@ -5,9 +5,7 @@
   "generationConfig": {
     "temperature": 0.7,
     "top_p": 0.95,
-    "max_tokens": 2048,
-    "frequency_penalty": 0,
-    "presence_penalty": 0
+    "max_tokens": 2048
   },
   "rateLimit": {
     "requestsPerMinute": 60,
