--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,7 +53,11 @@
   "pnpm": {
     "overrides": {
       "lodash": "^4.17.23",
-      "lodash-es": "^4.17.23"
+      "lodash-es": "^4.17.23",
+      "undici": ">=5.28.5",
+      "tar": ">=7.5.8",
+      "minimatch": ">=10.2.1",
+      "ajv": ">=8.17.1"
     }
   },
   "devDependencies": {
